Fix gap in Subscribe wording
Changed css from "h3" which does not exist to "h2" which does

--- a/styles.css
+++ b/styles.css
@@ -473,7 +473,7 @@ footer {
   margin: 0 auto;
 }
 
-.footer-content h3 {
+.footer-content h2 {
   font-size: 1.5rem;
   margin-bottom: 1px;
   font-weight: 700;
